# MyAutomatic

./: .gitattributes  .gitignore  .gitmodules  .vsconfig  AndroidManifest.xml  C++  CNAME  JavaBridgeTemplate721.war  MP_verify_wl4Ui9PrGfZNXJux.txt  MyAutomatic.lnk  MyAutomatic.vbs  PID  README.md  azure-pipelines.yml  build.sh  choose.bat  choose.ps1  clean.bat  clean.sh  index.html  login.html  params.json  sweep.bat  util.html
.github/workflows/: cmake-multi-platform.yml
AESwithMD5/: AES.cpp  AESwithMD5.cpp  aes.c  aes.h  md5.c  md5.h  transcoding.c  transcoding.h
Android/: AndroidManifest.xml
Android/BTos/: AndroidManifest.xml
Android/Device2Device/: .nomedia  AndroidManifest.xml  README.txt
C.C++/: PID.c
Device2Device/BTserial/: build.gradle
LinuSrvc/IM/: Makefile
LinuSrvc/gSOAPverify/: gSOAPverify.vcxproj  gSOAPverify.vcxproj.filters
LinuSrvc/hdware/: gpio.h  hdware.vcxproj  hdware.vcxproj.filters  me909s.c  v4l2.h
LinuSrvc/v4l/: me909s.c  sample.c  v4l.vcxproj
LinuxSrvc/: Makefile
LinuxSrvc/IM/: IM.vcxproj
LinuxSrvc/gSOAPverify/: Makefile  gSOAPverify.vcxproj  gSOAPverify.vcxproj.filters
LinuxSrvc/v4l/: Makefile  sample.c  v4l.c  v4l.vcxproj  v4l2.c  v4l2.h
LinxSrvc/: .gitignore  CMakeLists.txt  Makefile
LinxSrvc/AuthAgent/: AuthAgent.cpp  CMakeLists.txt  HttpEvent.cpp  HttpEvent.h  Logging.h  Makefile  utils.h
LinxSrvc/HttpAgent/: CMakeLists.txt  HttpAgent.cpp  HttpEvent.cpp  HttpEvent.h  Log.h  Utils.h
LinxSrvc/IM/: .gitignore  CMakeLists.txt  IM.cc  IM.vcxproj  IM.vcxproj.filters  KaSocket.cpp  KaSocket.h  KaiMain.cpp  KaiSocket.cc  KaiSocket.h  KaiSocket.md  KaiTest.cpp  KaiTest.cxx  Makefile  fifo.c  kaics.cfg  main.cpp  readme.md
LinxSrvc/IM/IM.xcodeproj/: project.pbxproj
LinxSrvc/IM/IM.xcodeproj/project.xcworkspace/xcuserdata/Shenyrion.xcuserdatad/: UserInterfaceState.xcuserstate
LinxSrvc/IM/IM.xcodeproj/xcuserdata/Shenyrion.xcuserdatad/xcschemes/: xcschememanagement.plist
LinxSrvc/bashfile/: gitbase.sh
LinxSrvc/e.g/: CMakeLists.txt  main.c
LinxSrvc/eg./: CMakeLists.txt  main.c
LinxSrvc/gSOAPverify/: Makefile  gSOAPverify.vcxproj  gSOAPverify.vcxproj.filters
LinxSrvc/gm/: CMakeLists.txt  CMakeSettings.json  build.sh  clean-all.cmake  main.cxx
LinxSrvc/gn/: CMakeLists.txt  build.sh  main.cxx
LinxSrvc/hdware/: Makefile  dirtyc0w.c  driver.c  fifo.h  gpio.h  hdware.vcxproj  hdware.vcxproj.filters  linuxsnap.c  linuxvideo.c  me909s.c  me909s.h  pipefifo.h  routine.c  routine.h  sample.c  test.c  test.h  tmpfifo.h  v4l2.c  v4l2.h
LinxSrvc/httpsample/: CMakeLists.txt  HttpEvent.cpp  HttpEvent.h  HttpSample.cpp  Makefile  Utils.cpp  Utils.h  httpsample.vcxproj
LinxSrvc/httpserver/: CMakeLists.txt  HttpEvent.cpp  HttpEvent.h  HttpServer.cpp  Utils.cpp
LinxSrvc/include/: String_-inl.h  Structures.h
LinxSrvc/pthdpool/: Makefile  pthdpool.c  pthdpool.cc  pthdpool.h  pthdtest.c  pthdtest.cc
LinxSrvc/sample/: CMakeLists.txt  HttpEvent.cpp  Utils.cpp  Utils.h  sample.vcxproj
LinxSrvc/test/: CMakeLists.txt  string_test.cpp  struct_test.cpp  test.cpp  test.sh  webevent_test.cpp
LinxSrvc/test/tests/: test2_struct.cpp  test3_event.cpp
LinxSrvc/thread/: Makefile  pthdpool.c  pthdpool.h  pthdtest.c  thread.vcxproj
LinxSrvc/webev/: HttpEvent.cpp  HttpMain.cpp  Makefile  Utils.h  webev.vcxproj
LinxSrvc/webevent/: CMakeLists.txt  HttpMain.cpp  Makefile  Utils.cpp  Utils.h  webevent.vcxproj
Market/: File1.txt  MarketKline.py
QtCases/: .gitignore  MainWindow.cpp  MainWindow.h  OfficeWidget.cpp  OfficeWidget.h  OglImage.cpp  OglImage.h  OglImgShow.cpp  OglImgShow.h  OglMaterial.cpp  OglMaterial.h  OpenGLWindow.cpp  OpenGLWindow.h  QtCases.pro  QtCases.vcxproj  QtCases.vcxproj.filters  ShowImage.cpp  ShowImage.h  ShowPNG.cpp  ShowPNG.h  WpsWidget.cpp  WpsWidget.h  gluiobj.cpp  gluiobj.h  main.cpp  mainwindow.qrc  mainwindow.ui  mkallcase.sh  openglwindow.qrc  openglwindow.ui  qrc_qtlogo.cpp  qtlogo.qrc  showimg.cpp  showimg.h
QtCases/wps/: wpswindow.cpp  wpswindow.h
QtCases/wpsapi/: wpswindow.cpp  wpswindow.h
WinNTKline/: .gitignore  .vsconfig  WinNTKline.sln
WinNTKline/CV4i/: CV4i.cpp  CV4i.vcxproj  CV4i.vcxproj.filters  stdafx.cpp
WinNTKline/CvMl/: CvMl.cpp  CvMl.vcxproj  CvMl.vcxproj.filters
WinNTKline/CvMlwk/: CvMlwk.vcxproj  CvMlwk.vcxproj.filters  CvmlMain.cpp
WinNTKline/IMclient/: client.cpp  client.vcxproj  client.vcxproj.filters  imclient.cpp
WinNTKline/KlineUtil/: ClassDiagram.cd  ReadMe.txt
WinNTKline/MFC/: .NETFramework,Version=v4.0.AssemblyAttributes.asm  MFCKline.res
WinNTKline/MFCKline/: ClassDiagram.cd  IMhideWndDlg.cpp  IMhideWndDlg.h  IMlogDlg.cpp  IMlogDlg.h  LoginDlg.cpp  LoginDlg.h  MFCKline.cpp  MFCKline.h  MFCKline.rc  MFCKline.vcxproj  MFCKline.vcxproj.filters  MFCKlineDlg.cpp  MFCKlineDlg.h  MyOglDrawDlg.cpp  MyOglDrawDlg.h  PropertySheet.props  RegistDlg.cpp  RegistDlg.h  Resource.h  SetMarkDlg.cpp  SetMarkDlg.h  packages.config  stdafx.h
WinNTKline/MfcUtil/: ClassDiagram.cd  IMhideWndDlg.cpp  IMhideWndDlg.h  IMlogDlg.cpp  IMlogDlg.h  LoginDlg.cpp  LoginDlg.h  MFCKline.cpp  MFCKline.h  MFCKline.rc  MFCKline.vcxproj  MFCKline.vcxproj.filters  MFCKlineDlg.cpp  MFCKlineDlg.h  MyOglDrawDlg.cpp  MyOglDrawDlg.h  RegistDlg.cpp  RegistDlg.h  Resource.h  SetMarkDlg.cpp  SetMarkDlg.h  SettingsDlg.cpp  SettingsDlg.h
WinNTKline/QtCases/: OpenGLWindow.cpp  QtCases.pro  QtCases.vcxproj  QtCases.vcxproj.filters  gluiobj.cpp  gluiobj.h  mkallcase.sh  ui_openglwindow.h
WinNTKline/QtKline/: Material.cpp  Material.h  MyOglWdg.cpp  MyOglWdg.h  QtKline.pro  QtKline.sln  QtKline.vcxproj  QtKline.vcxproj.filters  main.cpp  mkall.sh  myoglwdg.qrc  myoglwdg.ui  (+1 more)
arduino/: music.ino  sketch_nov22a.ino
css/: jquery-ui.css  jquery.idealforms.min.css  main.css  normalize.css
gSOAPverify/: Makefile  MyWeb.cc  fixmysql  gSOAPverify  gSOAPverify.vcxproj  gSOAPverify.vcxproj.filters
js/: common.js  jquery.idealforms.js  main.js  page.js
trans/: getfile.php  service.php  set2mysql.php  utils.php
wechat/: basic.py  handle.py  log.py  main.py  media.py  parser.py  receive.py  reply.py
(+692 files in other folders)
