CMAKE_MINIMUM_REQUIRED(VERSION 2.8...3.16)

SET(PROJ_NAME e.g)
PROJECT(${PROJ_NAME} C CXX)
FILE(GLOB SOURCE_FILES "*.c*")
ADD_EXECUTABLE(${PROJ_NAME} ${SOURCE_FILES})

IF (WIN32)
    IF (${CMAKE_BUILD_TYPE} STREQUAL "Release")
        SET(_TARGET_ "${CMAKE_BUILD_TYPE}/${PROJ_NAME}.exe")
    ELSE()
        SET(_TARGET_ "${CMAKE_BUILD_TYPE}/../${PROJ_NAME}.exe")
    ENDIF()
    SET(EXEC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../out)
ELSE()
    SET(_TARGET_ ${PROJ_NAME})
    SET(EXEC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../gen)
ENDIF()

ADD_CUSTOM_COMMAND(
    TARGET ${PROJ_NAME}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory ${EXEC_PATH}
    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_BINARY_DIR}/${_TARGET_} ${EXEC_PATH}
)
