CMAKE_MINIMUM_REQUIRED(VERSION 2.8...3.16)

SET(_TARGET eg.)
SET(EXEC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../gen/)

PROJECT(${_TARGET} C CXX)
FILE(GLOB SOURCE_FILES "*.c*")

ADD_EXECUTABLE(${_TARGET} ${SOURCE_FILES})
ADD_CUSTOM_COMMAND(
    TARGET ${_TARGET}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory ${EXEC_PATH}
    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_BINARY_DIR}/${_TARGET} ${EXEC_PATH}
)
