CMAKE_MINIMUM_REQUIRED(VERSION 2.8...3.16)
PROJECT("gm")
FILE(GLOB SOURCE_FILES "*.cxx")
SET(UNDEFS)
LIST(APPEND LIST_DEFINE GM GM_0)
LIST(APPEND LIST_TARGET gm gm0)
FOREACH(TARGET_NAME ${LIST_TARGET})
    LIST(APPEND I e)
    FOREACH(MACROS ${LIST_DEFINE})
        LIST(APPEND J e)
        LIST(LENGTH I i)
        LIST(LENGTH J j)
        IF (${i} EQUAL ${j})
            ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})
            SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES COMPILE_FLAGS "${UNDEFS} -D${MACROS}")
            TARGET_LINK_LIBRARIES(${TARGET_NAME} ${EXTRA_LIBS})
            SET(UNDEFS "${UNDEFS} -U${MACROS}")
            INSTALL(TARGETS ${TARGET_NANE} RUNTIME DESTINATION .)
        ENDIF()
    ENDFOREACH()
    SET(J)
ENDFOREACH()
