CMAKE_MINIMUM_REQUIRED(VERSION 2.8...3.16)
SET(_TARGET gn)
PROJECT(${_TARGET})
ADD_DEFINITIONS("-std=c++11")
#ADD_DEFINITIONS("-Wno-extra")
SET(EXTRA_LIBS pthread)
FILE(GLOB SOURCE_FILES "*.c*")
SET(UNDEFS)
LIST(APPEND LIST_DEFINE _GN)
LIST(APPEND LIST_TARGET ${_TARGET})
FOREACH(TARGET_NAME ${LIST_TARGET})
    LIST(APPEND I e)
    FOREACH(MACROS ${LIST_DEFINE})
        LIST(APPEND J e)
        LIST(LENGTH I i)
        LIST(LENGTH J j)
        IF (${i} EQUAL ${j})
            ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})
            SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES COMPILE_FLAGS "${UNDEFS} -D${MACROS}")
            TARGET_LINK_LIBRARIES(${TARGET_NAME} ${EXTRA_LIBS})
            SET(UNDEFS "${UNDEFS} -U${MACROS}")
            INSTALL(TARGETS ${TARGET_NANE} RUNTIME DESTINATION .)
        ENDIF()
    ENDFOREACH()
    SET(J)
ENDFOREACH()
ADD_CUSTOM_COMMAND(
    TARGET ${_TARGET}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/${_TARGET} ${CMAKE_CURRENT_SOURCE_DIR}/../gen/
 #  COMMAND ${CMAKE_COMMAND} -E rm -rf ${CMAKE_CURRENT_BINARY_DIR}/../../build/*
    COMMENT "-- 'gn' is a cross-platform tool to generatting numbers."
)
ADD_CUSTOM_TARGET(clear
    COMMAND ${CMAKE_BUILD_TOOL} clean
    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_SOURCE_DIR}/clean-all.cmake
)
